--- a/client/feedback-app.html
+++ b/client/feedback-app.html
@@ -1,99 +1,73 @@
 <head>
   <title>Feedback</title>
+    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&signed_in=true"></script>
 </head>
 
 <body>
-<div class="container">
-  <div class="navbar navbar-default" role="navigation">
-      <div class="navbar-header">
-          <a class="navbar-brand" href="#">{{appData.name}}</a>
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-          </button>
-      </div>
-      <div class="navbar-collapse collapse">
-          <!--<ul class="nav navbar-nav">-->
-          <!--    <li><a href="#">Complaints</a></li>-->
-          <!--     <li><a href="#">Compliments</a></li>-->
-          <!--</ul>-->
-          <ul class="nav navbar-nav navbar-right">
-              {{> loginButtons}}
-          </ul>
-      </div>
-  </div>
+    <div class="container">
+        <div class="navbar navbar-default" role="navigation">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="#">{{appData.name}}</a>
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+            </div>
+            <div class="navbar-collapse collapse">
+                <ul class="nav navbar-nav navbar-right">
+                    {{> loginButtons}}
+                </ul>
+            </div>
+        </div>
 
-{{#if currentUser}}
+        {{#if currentUser}}
 
-  <h2>What's your feedback? {{numberOfQuery}}</h2>
+          <h2>What's your feedback? {{numberOfQuery}}</h2>
+          {{> feedbackForm}}
+        {{/if}}
 
 
-  {{> feedbackForm}}
-
-  {{/if}}
-
-
-<h2>Overview <small>Complaints & Compliments</small></h2>
-
-  <div class="list-group">
-	  
-	    {{#each feedBacklist}}
-         {{> feedback}}
-      	{{/each}}
-	        
-</div>
-
-  
-</div>
-  
+        <h2>Overview <small>Complaints & Compliments</small></h2>
+        <div class="list-group">
+            {{#each feedBacklist}}
+             {{> feedback}}
+            {{/each}}
+        </div>
+    </div>
 </body>
 
 <template name="feedback">
-	
-	<a href="#" class="list-group-item">
+    <a href="#" class="list-group-item">
 	    <h4 class="list-group-item-heading"><small>{{feedbackType}} - by <i>{{currentUser}}</i></small></h4>
 	    <p class="list-group-item-text">{{feedback}}</p>
   	</a>
-	
 </template>
 
 
 <template name="feedbackForm">
-  
 	<div class="alert alert-danger" role="alert">Please enter feedback before submitting the form</div>
 	<form>
-
-		  	<div class="radio">
-				  <label>
-				    <input type="radio" name="feedbackType" id="optionsRadios1" value="Complaint" checked>
+        <div class="radio">
+            <label>
+                <input type="radio" name="feedbackType" id="optionsRadios2" value="Compliment" checked>
+                Compliment
+            </label>
+        </div>
+	    <div class="radio">
+		    <label>
+                <input type="radio" name="feedbackType" id="optionsRadios1" value="Complaint">
 				    Complaint
-				  </label>
-			</div>
-			<div class="radio">
-			  <label>
-			    <input type="radio" name="feedbackType" id="optionsRadios2" value="Compliment">
-			    Compliment
-			  </label>
-			</div>
+            </label>
+        </div>
 
         <p>
-
-	  		<textarea class="form-control" placeholder="Feeback" name="feedback" rows="3"></textarea>
-	  		<span id="helpBlock" class="help-block">Please enter your feeback above</span>
+	  		<textarea class="form-control" placeholder="Feedback" name="feedback" rows="3"></textarea>
+	  		<span id="helpBlock" class="help-block">Please enter your feedback above</span>
 	  	</p>
-  	
 	  	<p>
 			<input type="submit" class="btn btn-primary btn-lg btn-block" value="Submit">
 		</p>
-	
-  </form>
-</template>
-
-<template name="addPlayerForm">
-    <form>
-        <input type="text" name="playerName">
-        <input type="submit" value="Add Player">
     </form>
 </template>
